Adopt date type

--- a/DTDLSchemaGeneration/Kae.XTUML.Tools.Generator.DTDL/template/SchemaDef.tt
+++ b/DTDLSchemaGeneration/Kae.XTUML.Tools.Generator.DTDL/template/SchemaDef.tt
@@ -29,7 +29,7 @@
     }
     else if (subSdtDef is CIMClassS_UDT)
     {
-        if (sdtDef.Attr_Name == "timestamp" || sdtDef.Attr_Name == "inst_ref<Timer>")
+        if (sdtDef.Attr_Name == "timestamp" || sdtDef.Attr_Name == "date" || sdtDef.Attr_Name == "inst_ref<Timer>")
         {
             string typeName = dtToDTDLDataType[sdtDef.Attr_Name];
 #>
